--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@ button {
 header {
   height: 10rem;
   box-shadow: rgba(255, 255, 255, 0.3) 0px 10px 10px -10px;
-  background-color: #5a58e2ca;
+  background-color: #1e85eb;
   width: 100%;
 
   & .container {
@@ -174,9 +174,9 @@ nav ul {
 /* hero section  */
 
 .hero-section .container {
-  padding: 3.2rem;
-  margin: 9rem auto;
-  gap: 6.4rem;
+  padding: 2.2rem;
+  margin: 7rem auto;
+  gap: 5.4rem;
 }
 
 .paragraph {
@@ -187,8 +187,8 @@ nav ul {
   font-family: inherit;
   font-size: clamp(5.2rem, 6vw, 4.241rem);
   font-weight: 700;
-  line-height: 1.15;
-  letter-spacing: -1px;
+  line-height: 1.35;
+  /* letter-spacing: -1px; */
 }
 
 .hero-image {
@@ -198,7 +198,18 @@ nav ul {
 }
 
 .container .banner-image {
-  width: 100%;
+  width: 100%;  
+}
+
+.head{
+  font-family: inherit;
+  color: white;
+  text-align: center;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+  font-size: clamp(5.2rem, 6vw, 4.241rem);
+  font-weight: 700;
+  line-height: 1.35;
 }
 
 @media screen and (max-width: 990px) {
