--- a/src/App.css
+++ b/src/App.css
@@ -239,6 +239,7 @@ nav ul {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 3.2rem;
+
 }
 
 @media screen and (max-width: 991px) {
@@ -251,26 +252,34 @@ nav ul {
   text-align: center;
   padding: 0 !important;
   margin-bottom: 40px;
-  font-size: 40px;
-  color: #fff;
-  font-weight: 600;
+  font-size: 50px;
+  color: #281212;
+  font-weight: 700;
   line-height: 60px;
+  text-shadow: #000000 ;
 }
 
 .card {
   max-width: 55rem;
-  border: 0;
+  border: none;
   width: 100%;
   margin-inline: auto;
+  background-color: transparent;
+  
+
 }
 
 .container-card {
   position: relative;
   border: 2px solid transparent;
-  background: linear-gradient(71deg, #080509, #1a171c, #080509);
+  background: linear-gradient(120deg, #4682be, #69788b, #bdb9bf);
   background-clip: padding-box;
   border-radius: 45px;
   padding: 40px;
+  box-shadow: 
+    0 2px 4px rgba(61, 128, 173, 0.393),
+    0 8px 20px rgba(63, 76, 83, 0.387);
+  
 }
 
 .bg-green-box,
@@ -312,7 +321,7 @@ nav ul {
 
 .card-title {
   font-weight: 600;
-  color: white;
+  color: rgb(255, 255, 255);
   letter-spacing: -0.02em;
   line-height: 40px;
   font-style: normal;
@@ -323,7 +332,7 @@ nav ul {
 .card-description {
   font-weight: 600;
   line-height: 32px;
-  color: rgba(255, 255, 255, 0.5);
+  color: rgb(0, 0, 0);
   font-size: 16px;
   max-width: 470px;
 }
