--- a/src/App.css
+++ b/src/App.css
@@ -12,15 +12,15 @@ html {
 }
 
 body {
- background: rgb(114, 241, 255);
+  background: rgb(114, 241, 255);
 
-background: linear-gradient(90deg, hsla(186, 33%, 94%, 1) 0%, rgb(214, 224, 238) 100%);
+  background: linear-gradient(90deg, hsla(186, 33%, 94%, 1) 0%, rgb(214, 224, 238) 100%);
 
-background: -moz-linear-gradient(90deg, rgb(64, 228, 246) 0%, hsla(216, 41%, 79%, 1) 100%);
+  background: -moz-linear-gradient(90deg, rgb(64, 228, 246) 0%, hsla(216, 41%, 79%, 1) 100%);
 
-background: -webkit-linear-gradient(90deg, hsla(186, 33%, 94%, 1) 0%, hsla(216, 41%, 79%, 1) 100%);
+  background: -webkit-linear-gradient(90deg, hsla(186, 33%, 94%, 1) 0%, hsla(216, 41%, 79%, 1) 100%);
 
-filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#EBF4F5", endColorstr="#B5C6E0", GradientType=1 );
+  filter: progid: DXImageTransform.Microsoft.gradient(startColorstr="#EBF4F5", endColorstr="#B5C6E0", GradientType=1);
 }
 
 h1,
@@ -126,13 +126,13 @@ header {
 nav ul {
   display: flex;
   justify-content: flex-end;
- 
+
   gap: 3.2rem;
   color: #fff;
 
   & li a {
     color: #fff;
-    
+
   }
 }
 
@@ -204,10 +204,10 @@ nav ul {
 }
 
 .container .banner-image {
-  width: 100%;  
+  width: 100%;
 }
 
-.head{
+.head {
   font-family: inherit;
   color: white;
   text-align: center;
@@ -256,7 +256,7 @@ nav ul {
   color: #281212;
   font-weight: 700;
   line-height: 60px;
-  text-shadow: #000000 ;
+  text-shadow: #000000;
 }
 
 .card {
@@ -265,7 +265,7 @@ nav ul {
   width: 100%;
   margin-inline: auto;
   background-color: transparent;
-  
+
 
 }
 
@@ -276,7 +276,7 @@ nav ul {
   background-clip: padding-box;
   border-radius: 45px;
   padding: 40px;
-  box-shadow: 
+  box-shadow:
     0 2px 4px rgba(61, 128, 173, 0.393),
     0 8px 20px rgba(63, 76, 83, 0.387);
   
@@ -383,6 +383,7 @@ ul {
   margin: 0px;
   padding: 0px;
 }
+
 .footer-section {
   background: #85b1ee77;
   position: relative;
@@ -392,22 +393,27 @@ ul {
   background: #22a2e73e;
   padding: 25px 0;
 }
+
 .copyright-text p {
   margin: 0;
   font-size: 14px;
   color: #000000;
 }
+
 .copyright-text p a {
   color: #b01e1e;
   margin-left: 0.6rem;
 }
+
 .footer-menu li {
   display: inline-block;
   margin-left: 20px;
 }
+
 .footer-menu li:hover a {
   color: #000000;
 }
+
 .footer-menu li a {
   font-size: 14px;
   color: #b01e1e;
@@ -419,9 +425,13 @@ country Card
 
 .country-card {
   margin-top: 3.2rem;
+  width: 80%;
+  
 }
+
 .country-section {
-  margin: 6.4rem auto 9.6rem auto;
+  margin: 4.4rem auto 9.6rem auto;
+
   & .grid {
     gap: 3.2rem;
     max-width: 132rem;
@@ -435,9 +445,9 @@ country Card
   }
 }
 
-/* indivisual card container  */
+/* individual card container  */
 .country-details-card {
-  max-width: 100%;
+  max-width: 75%;
   margin: 6.4rem auto;
   box-shadow: rgba(168, 163, 184, 0.15) 0px 48px 100px 0px;
 
@@ -460,13 +470,15 @@ country Card
   & .infoContainer {
     display: flex;
     flex-direction: column;
-    gap: 2.4rem;
+    gap: 0.4rem;
   }
 
   & .country-card-backBtn {
     width: 100%;
     display: flex;
     justify-content: flex-end;
+    
+
   }
 }
 
@@ -479,24 +491,26 @@ country Card
 
   & .container-card {
     padding: 0.8rem 2.4rem;
-    background: linear-gradient(71deg, #080509, #1a171c, #080509);
+    background: linear-gradient(71deg, #5496dd, #5799cf, #52a4db);
   }
 
   & input {
     font-family: "urbanist";
-    font-size: 1.55rem;
+    font-size: 1.95rem;
     font-weight: bold;
     letter-spacing: 0.1rem;
     text-transform: capitalize;
-    color: rgba(255, 255, 255, 0.8);
-    border: 0.05rem solid #fff;
-    background: linear-gradient(71deg, #080509, #1a171c, #080509);
+    color: rgba(0, 0, 0, 0.8);
+    border: 0.2rem solid #000000;
+    background: transparent;
+    padding: 1rem;
+    border-radius: 10px;
   }
 
   & .select-section {
-    background: linear-gradient(71deg, #080509, #1a171c, #080509);
+    background: #2382db;
     color: rgba(255, 255, 255, 0.8);
-    padding: 0.6rem 2.4rem;
+    padding: 1.3rem 2.4rem;
     border-radius: 5rem;
     -webkit-border-radius: 5rem;
     -moz-border-radius: 5rem;
@@ -509,16 +523,16 @@ country Card
     text-transform: capitalize;
 
     & option {
-      background: linear-gradient(71deg, #080509, #1a171c, #080509);
+      background:#b6cce0;
       color: rgba(255, 255, 255, 0.8);
       padding: 0.6rem 2.4rem;
       border-radius: 5rem;
     }
   }
 
-  & .select-section > option {
-    background-color: #080509;
-    color: rgba(255, 255, 255, 0.8);
+  & .select-section>option {
+    background-color: #b6cce0;
+    color: black;
     padding: 0.6rem 2.4rem;
     border-radius: 5rem;
     margin-top: 1rem;
@@ -529,7 +543,7 @@ country Card
   font-size: 1.6rem;
   letter-spacing: 0.1rem;
   text-transform: capitalize;
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(0, 0, 0, 0.765);
 }
 
 /* ------------------ 
@@ -543,6 +557,7 @@ contact us page
     border-color: rgba(255, 255, 255, 0.6);
   }
 }
+
 .contact-wrapper {
   display: flex;
   justify-content: center;
@@ -589,6 +604,7 @@ contact us Page ends here
 }
 
 @media screen and (max-width: 760px) {
+
   .grid-four-cols,
   .grid-three-cols,
   .grid-two-cols {
@@ -615,6 +631,7 @@ contact us Page ends here
   mask-composite: subtract;
   animation: l3 1s infinite linear;
 }
+
 @keyframes l3 {
   to {
     transform: rotate(1turn);
